[REFACTOR] 코드 정리

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
 
     <color name="blue_500">#2A4D68</color>
 
-    <color name="oragne_500">#ED6C3C</color>
+    <color name="orange_500">#ED6C3C</color>
 
     <color name="red_200">#685860</color>
     <color name="red_500">#63302B</color>
