--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/gray_900</item>
         <!-- Customize your theme here. -->
+        <item name="android:includeFontPadding">false</item>
     </style>
 </resources>
