--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -6,6 +6,10 @@
     <data>
 
         <import type="org.sopt.jointseminar.melon.R" />
+
+        <variable
+            name="commentData"
+            type="org.sopt.jointseminar.melon.model.CommentInfo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -82,6 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/pretendard_l"
+            android:text="@{commentData.comment}"
             android:textColor="@color/gray_300"
             android:textSize="13sp"
             app:layout_constraintStart_toStartOf="@id/gl_start"
