[MOD] 곡 목록 뷰를 RecyclerView -> ConstraintLayout으로 변경

--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -376,15 +376,13 @@
                     app:layout_constraintEnd_toEndOf="@id/gl_end"
                     app:layout_constraintTop_toTopOf="@id/btn_select_all" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_music_list"
+                <include
+                    android:id="@+id/layout_music"
+                    layout="@layout/item_music_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_constraintTop_toBottomOf="@id/btn_select_all"
-                    tools:itemCount="1"
-                    tools:listitem="@layout/item_music_horizontal" />
+                    app:layout_constraintTop_toBottomOf="@id/btn_select_all" />
 
                 <!-- 앨범 소개 -->
                 <TextView
@@ -397,7 +395,7 @@
                     android:textColor="@color/gray_300"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="@id/gl_start"
-                    app:layout_constraintTop_toBottomOf="@id/rv_music_list" />
+                    app:layout_constraintTop_toBottomOf="@id/layout_music" />
 
                 <TextView
                     android:id="@+id/tv_type_label"
