[FEAT] back 버튼 및 글쓰기 버튼 클릭리스너 등록

--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -550,6 +550,7 @@
                     tools:text="댓글 3" />
 
                 <ImageButton
+                    android:id="@+id/btn_posting"
                     style="@style/Widget.Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
