[REFACTOR] 패키지 구조 변경 및 데이터, 뷰모델 클래스 생성

--- a/app/src/main/res/layout/activity_posting.xml
+++ b/app/src/main/res/layout/activity_posting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_900"
-    tools:context=".presentation.PostingActivity">
+    tools:context=".presentation.posting.PostingActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_top"
