--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
 
     <color name="gray_300">#D0D0D0</color>
     <color name="gray_500">#A0A0A0</color>
+    <color name="gray_600">#303030</color>
     <color name="gray_900">#121212</color>
 </resources>
