--- a/app/src/main/res/layout/activity_posting.xml
+++ b/app/src/main/res/layout/activity_posting.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="org.sopt.jointseminar.melon.R" />
         <variable
             name="viewModel"
             type="org.sopt.jointseminar.melon.presentation.posting.PostingViewModel" />
@@ -184,23 +185,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="14dp"
-            android:text="@string/writing_max_count"
+            android:text="@{String.format(context.getString(R.string.writing_max_count), viewModel.reviewCount)}"
             android:textColor="@color/gray_500"
             android:textSize="11sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_line_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_goneMarginBottom="10dp" />
-
-        <TextView
-            android:id="@+id/tv_text_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.countString}"
-            android:textSize="11sp"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_max_count"
-            app:layout_constraintEnd_toStartOf="@+id/tv_max_count"
-            app:layout_constraintTop_toTopOf="@+id/tv_max_count" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
