--- a/app/src/main/res/layout/item_recommended_music_sample_list.xml
+++ b/app/src/main/res/layout/item_recommended_music_sample_list.xml
@@ -1,92 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/tv_weekly_playlist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/pretendard_m"
-        android:textColor="@color/green_600"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="이번 주 인기 플레이리스트" />
+    <data>
+
+        <variable
+            name="favouriteData"
+            type="org.sopt.jointseminar.melon.presentation.ResponseHomeFavourite" />
+    </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_square"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rectangle_radius_6"
-        android:backgroundTint="@color/gray_600"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tv_weekly_playlist"
-        app:layout_constraintTop_toBottomOf="@id/tv_weekly_playlist">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_play"
+        <TextView
+            android:id="@+id/tv_weekly_playlist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/pretendard_m"
+            android:text="@{favouriteData.title}"
+            android:textColor="@color/green_600"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="이번 주 인기 플레이리스트" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_square"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="11dp"
-            android:src="@drawable/ic_polygon_10"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_music"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="18dp"
             android:background="@drawable/rectangle_radius_6"
-            android:scaleType="centerCrop"
-            app:layout_constraintWidth_percent="0.6"
+            android:backgroundTint="@color/gray_600"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/mask" />
+            app:layout_constraintStart_toStartOf="@id/tv_weekly_playlist"
+            app:layout_constraintTop_toBottomOf="@id/tv_weekly_playlist">
 
-        <TextView
-            android:id="@+id/tv_hash_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/pretendard_m"
-            android:gravity="center"
-            android:maxEms="9"
-            android:maxLines="1"
-            android:textColor="@color/gray_300"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/tv_description"
-            app:layout_constraintStart_toStartOf="@id/tv_description"
-            app:layout_constraintTop_toBottomOf="@id/tv_description"
-            tools:text="#분위기 #팝송" />
+            <ImageView
+                android:id="@+id/iv_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="11dp"
+                android:src="@drawable/ic_polygon_10"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="12dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/pretendard_sb"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_music"
-            tools:text="POP 갬성 폭발 분위기 끝..." />
+            <ImageView
+                android:id="@+id/iv_music"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginTop="18dp"
+                android:background="@drawable/rectangle_radius_6"
+                android:scaleType="centerCrop"
+                android:src="@{favouriteData.image}"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.6" />
+
+            <TextView
+                android:id="@+id/tv_hash_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/pretendard_m"
+                android:gravity="center"
+                android:maxEms="9"
+                android:maxLines="1"
+                android:text="@{favouriteData.hashTag}"
+                android:textColor="@color/gray_300"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/tv_content"
+                app:layout_constraintStart_toStartOf="@id/tv_content"
+                app:layout_constraintTop_toBottomOf="@id/tv_content"
+                tools:text="#분위기 #팝송" />
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginTop="12dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/pretendard_sb"
+                android:gravity="center"
+                android:maxEms="8"
+                android:maxLines="1"
+                android:text="@{favouriteData.content}"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_music"
+                tools:text="POP 갬성 폭발 분위기 끝..." />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
