--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="org.sopt.jointseminar.melon.presentation.HomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/layout_home"
+        android:id="@+id/layout_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/gray_900"
@@ -16,7 +20,9 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="100dp"
+            tools:layout_editor_absoluteY="-347dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -40,6 +46,17 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <TextView
+                    android:id="@+id/foreign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="9dp"
+                    android:fontFamily="@font/pretendard_m"
+                    android:text="해외"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_line_two"
+                    app:layout_constraintStart_toEndOf="@id/iv_line_two" />
 
                 <ImageView
                     android:id="@+id/iv_home_buy"
@@ -126,22 +143,124 @@
                     android:id="@+id/tv_entire"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="7dp"
                     android:fontFamily="@font/pretendard_m"
                     android:text="전체"
-                    android:layout_marginStart="7dp"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_recent_music"
-                    app:layout_constraintStart_toEndOf="@+id/tv_recent_music"
                     android:textColor="@color/green_500"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_recent_music"
+                    app:layout_constraintStart_toEndOf="@+id/tv_recent_music" />
+
                 <ImageView
                     android:id="@+id/iv_line"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_line"
-                    app:layout_constraintStart_toEndOf="@id/tv_entire"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_entire"
                     android:layout_marginStart="9dp"
-                    />
+                    android:src="@drawable/ic_line"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_entire"
+                    app:layout_constraintStart_toEndOf="@id/tv_entire" />
+
+                <TextView
+                    android:id="@+id/tv_domestic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="11dp"
+                    android:fontFamily="@font/pretendard_m"
+                    android:text="국내"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@id/iv_line"
+                    app:layout_constraintStart_toStartOf="@id/iv_line" />
+
+                <ImageView
+                    android:id="@+id/iv_line_two"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="9dp"
+                    android:src="@drawable/ic_line"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_domestic"
+                    app:layout_constraintStart_toEndOf="@id/tv_domestic" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:textColor="@color/gray_500"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/foreign"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="전체보기" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_recent_music"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintTop_toBottomOf="@id/tv_recent_music"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/item_recent_music_sample_list" />
+
+                <TextView
+                    android:id="@+id/tv_top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="49dp"
+                    android:text="TOP3"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="@id/tv_recent_music"
+                    app:layout_constraintTop_toBottomOf="@id/rv_recent_music" />
+
+                <include
+                    android:id="@+id/ic_first_music"
+                    layout="@layout/item_top_music"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="30dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/tv_top"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_top"
+                    bind:topMusicInfo="@{viewModel.topMusicList.get(0)}" />
+
+                <include
+                    android:id="@+id/ic_second_music"
+                    layout="@layout/item_top_music"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="30dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/tv_top"
+                    app:layout_constraintTop_toBottomOf="@id/ic_first_music"
+                    bind:topMusicInfo="@{viewModel.topMusicList.get(1)}" />
+
+                <include
+                    android:id="@+id/ic_third_music"
+                    layout="@layout/item_top_music"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="30dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/tv_top"
+                    app:layout_constraintTop_toBottomOf="@id/ic_second_music"
+                    bind:topMusicInfo="@{viewModel.topMusicList.get(2)}" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="200dp"
+                    android:layout_marginBottom="300dp"
+                    android:fontFamily="@font/pretendard_sb"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/ic_third_music"
+                    app:layout_constraintTop_toBottomOf="@+id/ic_third_music"
+                    android:text="멜론트랜디  50" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
