--- a/app/src/main/res/layout/item_top_music.xml
+++ b/app/src/main/res/layout/item_top_music.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,8 +17,8 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@{context.getColor(topMusicInfo.rank.colorRes)}"
             app:cardCornerRadius="6dp"
-            android:background="@{context.getColor(topMusicInfo.rank.colorRes)}"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,9 +30,10 @@
                     android:id="@+id/iv_album_cover"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/home_img_box"
+                    android:src="@{context.getDrawable(topMusicInfo.image)}"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@drawable/home_img_box" />
 
                 <TextView
                     android:id="@+id/tv_rank"
