--- a/app/src/main/res/layout/item_recent_music_sample_list.xml
+++ b/app/src/main/res/layout/item_recent_music_sample_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="recentMusicData"
-            type="org.sopt.jointseminar.melon.data.posting.ResponseRecentMusic" />
+            type="org.sopt.jointseminar.melon.data.music.ResponseRecentMusic" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
