[FEAT] 영문을 알 수 없는 변경사항들 커밋. 내가 안 한 것같은데 언제 한거지?

--- a/app/src/main/res/layout/item_top_music.xml
+++ b/app/src/main/res/layout/item_top_music.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="topMusicInfo"
-            type="org.sopt.jointseminar.melon.data.posting.TopMusicInfo" />
+            type="org.sopt.jointseminar.melon.data.entity.posting.TopMusicInfo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
