--- a/app/src/main/res/layout/item_recommended_music_sample_list.xml
+++ b/app/src/main/res/layout/item_recommended_music_sample_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="favouriteData"
-            type="org.sopt.jointseminar.melon.data.music.ResponseHomeFavourite" />
+            type="org.sopt.jointseminar.melon.data.entity.music.ResponseHomeFavourite" />
     </data>
 
 
