--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -8,8 +8,8 @@
         <import type="org.sopt.jointseminar.melon.R" />
 
         <variable
-            name="commentData"
-            type="org.sopt.jointseminar.melon.model.CommentInfo" />
+            name="comment"
+            type="org.sopt.jointseminar.melon.data.entity.album.AlbumCommentInfo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,20 +47,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:fontFamily="@font/pretendard_l"
-            android:text="쌩이"
+            android:text="@{comment.author}"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/iv_user_img"
             app:layout_constraintStart_toEndOf="@id/iv_user_img"
-            app:layout_constraintTop_toTopOf="@id/iv_user_img" />
+            app:layout_constraintTop_toTopOf="@id/iv_user_img"
+            tools:text="쌩이" />
 
+        <!-- n시간 전 포맷으로 변경 -->
         <TextView
             android:id="@+id/tv_create_at"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:fontFamily="@font/pretendard_l"
-            android:text="@{String.format(context.getString(R.string.format_time), 4)}"
+            android:text="@{comment.createdAt}"
             android:textColor="@color/gray_500"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/iv_user_img"
@@ -85,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/pretendard_l"
-            android:text="@{commentData.comment}"
+            android:text="@{comment.comment}"
             android:textColor="@color/gray_300"
             android:textSize="13sp"
             app:layout_constraintStart_toStartOf="@id/gl_start"
@@ -97,11 +99,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/pretendard_l"
-            android:text="답글 0"
+            android:text="@{String.format(context.getString(R.string.format_reply), comment.replyNum)}"
             android:textColor="@color/gray_500"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@id/gl_start"
-            app:layout_constraintTop_toBottomOf="@id/tv_comment" />
+            app:layout_constraintTop_toBottomOf="@id/tv_comment"
+            tools:text="답글 0" />
 
         <Button
             android:id="@+id/btn_like"
@@ -113,11 +116,12 @@
             android:drawableStart="@drawable/ic_like"
             android:drawablePadding="3dp"
             android:fontFamily="@font/pretendard_l"
-            android:text="0"
+            android:text="@{Integer.toString(comment.likeNum)}"
             android:textColor="@color/gray_500"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btn_dislike" />
+            app:layout_constraintEnd_toStartOf="@id/btn_dislike"
+            tools:text="0" />
 
         <Button
             android:id="@+id/btn_dislike"
@@ -127,10 +131,11 @@
             android:drawableStart="@drawable/ic_dislike"
             android:drawablePadding="3dp"
             android:fontFamily="@font/pretendard_l"
-            android:text="0"
+            android:text="@{Integer.toString(comment.hateNum)}"
             android:textColor="@color/gray_500"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@id/gl_end"
-            app:layout_constraintTop_toTopOf="@id/btn_like" />
+            app:layout_constraintTop_toTopOf="@id/btn_like"
+            tools:text="0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
